--- a/app/src/eventos/res/values/strings.xml
+++ b/app/src/eventos/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Thinstagram</string>
+    <string name="app_name">Fabio e Isa</string>
     <string name="parse_app_id">YOUR_APLICATION_ID</string>
     <string name="parse_client_key">YOUR_CLIENT_KEY</string>
     <string name="botao_cadastrar">Cadastrar</string>
